# riskops-copilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
configs/: anomaly_rules.yaml  metric_params.yaml  strategy_scenarios.yaml
docs/: architecture.md  codex_tasks.md  copilot_briefing.md  data_dictionary.md  data_generation_log.md  data_lineage.md  demo_script.md  interview_pitch.md  key_relationships.md  m6_feature_engineering_result.md  m6_ml_baseline_diagnostics.md  m6_ml_readiness.md  m6_prep_plan.md  m6_strategy_evaluator.md  m6_strategy_scenarios.md  m6_synthetic_data_calibration_plan.md  m6_target_definition.md  metric_dictionary.md  metric_lineage.md  portfolio_demo_script.md  privacy_policy.md  project_pitch.md
metadata/: columns.yaml  key_relationships.yaml  metric_change_log.yaml  metric_dictionary.yaml  metric_lineage.yaml  metric_owner.yaml  privacy_policy.yaml  tables.yaml
riskops/: __init__.py
schemas/: ads.sql  dim.sql  dwd.sql  dws.sql  ods.sql
scripts/: build_warehouse.py  detect_anomalies.py  generate_synthetic_data.py  render_business_report.py  render_dashboard.py  render_docs.py  render_m3_report.py  riskops_cli.py  run_all.sh  run_attribution.py  run_ml_baseline.py  run_roi_calculator.py  run_strategy_eval.py  validate_data_quality.py  validate_metric_quality.py  validate_strategy_scenarios.py
tests/: test_anomaly_detection.py  test_attribution.py  test_business_report.py  test_cli.py  test_copilot_briefing.py  test_dashboard.py  test_data_quality.py  test_excel_renderer.py  (+23 more)
(+137 files in other folders)
